--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 main {
     display: grid;
     grid-template: 1fr 8fr / 250px 1fr;
@@ -10,7 +14,6 @@ img {
 
 .sidebar {
     background-color: #1a92d3;
-    border: 2px solid blue;
     grid-row: 1 / 3;
     display: flex;
     flex-direction: column;
@@ -29,6 +32,10 @@ img {
     gap: 10px;
 }
 
+img[src="Icons/man.svg"] {
+    
+}
+
 .sidebar-bottom, .sidebar-middle {
     display: flex;
     flex-direction: column;
@@ -37,6 +44,15 @@ img {
 .sidebar-link {
     display: flex;
     gap: 10px;
+}
+
+button {
+    border-radius: 10px;
+    background-color: #1a92d3;
+    padding: 10px 18px;
+    color: whitesmoke;
+    border: 1px solid #1a92d3;
+    box-shadow: 1px 2px 1px #d1d7dd;
 }
 
 section {
@@ -57,6 +73,9 @@ header {
     align-items: center;
     justify-content: space-between;
     margin: -20px 10px;
+}
+
+.header-row+div {
     line-height: 2px;
 }
 
@@ -70,6 +89,7 @@ header {
     width: 400px;
     border-radius: 10px;
     height: 22px;
+    margin-right: 5px;
 }
 
 .buttons {
@@ -103,31 +123,90 @@ header {
     border-radius: 10px;
     padding: 10px;
     height: 200px;
-    width: 200px
+    width: 200px;
+    position: relative;
 }
 
-.trending{
-    border: 2px solid #d1d7dd;
-    background-color: whitesmoke;
-    box-shadow: 1px #d1d7dd;
+.card div {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+}
+
+
+.trending-row h4 {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+}
+
+.announcement{
+    box-shadow: 1px 2px 1px #d1d7dd;
+    text-align: center;
     border-radius: 10px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
+    background-color: whitesmoke;
+    padding: 5px;
+    margin: 5px 10px;
+    overflow: wrap;
+    height: 75px;
+}
+
+.announcement h3, .trending h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+}
+
+.announcement p, .trending p {
+    font-size: 10px;
+    margin: 3px;
+}
+
+
+.announcements {
+    display: grid;
+    gap: 5px;
+    margin-left: 15px;
+    align-content: center;
+}
+
+.trending {
+    display: grid;
+    gap: 5px;
+    align-content: start;
+    justify-content: center;
+    margin-left: 15px;
 }
 
 .trending-row {
     display: flex;
     gap: 10px;
-    line-height: 2px;
+    border: 1px solid #d1d7dd;
+    box-shadow: 1px 2px 1px #d1d7dd;
+    background-color: whitesmoke;
+    border-radius: 15px;
+    padding: 15px;
 }
 
-.announcement{
-    border-bottom: 1px solid grey;
-    text-align: center;
-    border-radius: 10px;
-    background-color: whitesmoke;
-    padding: 5px;
-    margin: 15px 10px;
+button:hover {
+    background-color: #6dbbe5;
+    cursor: pointer;
+}
+
+img {
+    transition: .1s;
+}
+
+img:hover, .sidebar>div div:hover  {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.card, .announcement, .trending-row, .sidebar div {
+    transition: .3s;
+}
+
+.card:hover, .announcement:hover, .trending-row:hover {
+    cursor: pointer;
+    transform: scale(1.05);
 }
